--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+
+@font-face {
+    font-family: "flexi";
+    src: url("WebPlus_IBM_VGA_8x16.woff") format("woff");
+    	 url("Flexi_IBM_VGA_False.ttf") format("truetype");
+}
+
 body { 
-    background-color: #1E1E2E; 
+    background-color: #000;	
+    font-family: "flexi", monospace;
     color: #cdd6f4; 
-    font-family: monospace, monospace; 
-    font-size: 15px; 
+    font-size: 16px; 
     line-height: 1.14; 
     margin: auto; 
     width: fit-content }
