--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: "flexi";
-    src: url("WebPlus_IBM_VGA_8x16.woff") format("woff");
+    src: url("WebPlus_IBM_VGA_8x16.woff") format("woff"),
     	 url("Flexi_IBM_VGA_False.ttf") format("truetype");
 }
 
